--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   web:
-    build: ../
+    build:
+      context: ../
+      dockerfile: ./development/Dockerfile
     ports:
       - "5000:5000"
     volumes:
